fix spacing

--- a/html5up-phantom/assets/css/main.css
+++ b/html5up-phantom/assets/css/main.css
@@ -268,6 +268,11 @@ background-image: url("https://www.transparenttextures.com/patterns/natural-pape
   padding-left: 3px;
 }
 
+.letter {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
 	sub {
 		font-size: 0.8em;
 		position: relative;
